--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   font-size: 16px;
   color: $default;
-  background-color: #141b23;
+  background-color: #11161d;
   @extend %montserat-400;
   background-image: url('../images/body-bg.svg');
 }
@@ -83,6 +83,9 @@ section{
   &__title{
     margin-bottom: 30px;
   }
+  &__span{
+    font-size: 49px;
+  }
   &__subtitle{
     @extend %rfdewi-400;
     font-size: 25px;
@@ -155,6 +158,7 @@ section{
   padding: 23px 9px 23px 30px;
   border: 2px solid $border;
   margin-bottom: 25px;
+  border-radius: 10px;
   &__box-img{
     background: linear-gradient(332.85deg, rgba(3, 142, 233, 0.1) 16.95%, rgba(20, 27, 35, 0) 86.86%), #141B23;
     box-shadow: 0px 10px 40px rgba(255, 255, 255, 0.1), inset 0px 0px 20px rgba(255, 255, 255, 0.3);
@@ -181,4 +185,45 @@ section{
     font-weight: 400;
     width: 280px;
   }
+}
+
+.accardion-item{
+  display: flex;
+  border: 2px solid $border;
+  border-radius: 10px;
+  padding: 23px 50px;
+  position: relative;
+  cursor: pointer;
+  &::before{
+    content: '';
+    position: absolute;
+    width: 12px;
+    height: 20px;
+    background-image: url('../images/arrow-down.svg');
+    right: 50px;
+    top: 23px;
+  }
+  &__num{
+    @extend %montserat-500;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 500;
+    color: rgba($color: #fff, $alpha: 0.4);
+    margin-right: 55px;
+  }
+  &__question{
+    @extend %montserat-400;
+    font-size: 15px;
+    line-height: 25px;
+  }
+  &__answer{
+    display: none;
+  }
+}
+
+.answer--active{
+  display: block;
+}
+.popup-active{
+  overflow: hidden;
 }
