--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,6 +32,55 @@ section{
   margin: 0 auto;
 }
 
+.btn-burger{
+  position: relative;
+  display: block;
+  width: 35px;
+  height: 25px;
+  display: none;
+  transition: .3s;
+  &::before,
+  &::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    top: 0;
+    left: 0;
+    border-radius: 2px;
+    transition: .3s;
+  }
+  &::after{
+    top: unset;
+    bottom: 0;
+  }
+  span{
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    top: 12px;
+    left: 0;
+    border-radius: 2px;
+    transition: .3s;
+  }
+  &--active{
+    transition: .3s;
+    &::before{
+      transform: rotate(135deg);
+      top: 11px;
+    }
+    &::after{
+      transform: rotate(-135deg);      
+      bottom: 11px;
+    }
+    span{
+      transform: scale(0)
+    }
+  }
+}
+
 .title{
   @extend %rfdewi-600;
   font-size: 55px;
@@ -129,6 +178,7 @@ section{
     width: 370px;
     border: 2px solid $border;
     padding: 30px 25px;
+    border-radius: 10px;
   }
   &__item-img{
     margin-bottom: 10px;
