--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -4,7 +4,6 @@
   font-style: normal;
   src: url('../fonts/RFDewiExpanded-Light.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Light.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -13,7 +12,6 @@
   font-style: normal;
   src: url('../fonts/RFDewiExpanded-Regular.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Regular.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -22,7 +20,6 @@
   font-style: normal;
   src: url('../fonts/RFDewiExpanded-Semibold.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Semibold.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -31,7 +28,6 @@
   font-style: normal;
   src: url('../fonts/RFDewiExpanded-Bold.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Bold.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -40,16 +36,14 @@
   font-style: normal;
   src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
        url('../fonts/Montserrat-Regular.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
   font-family: 'Montserrat-Italic';
   font-weight: 400;
-  font-style: normal;
+  font-style: italic;
   src: url('../fonts/Montserrat-Italic.woff2') format('woff2'),
        url('../fonts/Montserrat-Italic.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -58,7 +52,6 @@
   font-style: normal;
   src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
        url('../fonts/Montserrat-Medium.woff') format('woff');
-  font-display: swap;
 }
 
 @font-face{
@@ -67,5 +60,4 @@
   font-style: normal;
   src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
        url('../fonts/Montserrat-SemiBold.woff') format('woff');
-  font-display: swap;
 }
