--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -64,7 +64,7 @@
     margin-bottom: 40px;
   }
   .main-screen{
-    background-image: unset;
+    background-image: none;
     &__image{
       max-width: 540px;
     }
