--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -24,8 +24,9 @@ $border: #1d242c;
   font-weight: 400;
 }
 %montserat-italic{
-  font-family: 'Montserrat-Italic', serif;
+  font-family: 'Montserrat-Italic', sans-serif;
   font-weight: 400;
+  font-style: italic;
 }
 %montserat-500{
   font-family: 'Montserrat-Medium', sans-serif;
