--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -465,7 +465,7 @@
       padding-top: 70px;
     }
   }
-  .advantages__item:nth-child(4){
+  .benefits__item:nth-child(4){
     .list__item-title {
       min-width: unset;
     }
