--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,7 +10,7 @@ body {
   color: $default;
   background-color: #11161d;
   @extend %montserat-400;
-  background-image: url('../images/body-bg.svg');  
+  // background-image: url('../images/body-bg.svg');  
 }
 
 main {
