--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -2,7 +2,8 @@
   font-family: 'RFDewiExpanded-Light';
   font-weight: 300;
   font-style: normal;
-  src: url('../fonts/RFDewiExpanded-Light.woff2') format('woff2'),
+  src: local('RFDewiExpanded-Light'),
+       url('../fonts/RFDewiExpanded-Light.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Light.woff') format('woff');
   font-display: swap;
 }
@@ -11,7 +12,8 @@
   font-family: 'RFDewiExpanded-Regular';
   font-weight: 400;
   font-style: normal;
-  src: url('../fonts/RFDewiExpanded-Regular.woff2') format('woff2'),
+  src: local('RFDewiExpanded-Regular'),
+       url('../fonts/RFDewiExpanded-Regular.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Regular.woff') format('woff');
   font-display: swap;
 }
@@ -20,7 +22,8 @@
   font-family: 'RFDewiExpanded-Semibold';
   font-weight: 600;
   font-style: normal;
-  src: url('../fonts/RFDewiExpanded-Semibold.woff2') format('woff2'),
+  src: local('RFDewiExpanded-Light'),
+       url('../fonts/RFDewiExpanded-Semibold.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Semibold.woff') format('woff');
   font-display: swap;
 }
@@ -29,7 +32,8 @@
   font-family: 'RFDewiExpanded-Bold';
   font-weight: 700;
   font-style: normal;
-  src: url('../fonts/RFDewiExpanded-Bold.woff2') format('woff2'),
+  src: local('RFDewiExpanded-Bold'),
+       url('../fonts/RFDewiExpanded-Bold.woff2') format('woff2'),
        url('../fonts/RFDewiExpanded-Bold.woff') format('woff');
   font-display: swap;
 }
@@ -38,7 +42,8 @@
   font-family: 'Montserrat-Regular';
   font-weight: 400;
   font-style: normal;
-  src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+  src: local('Montserrat-Regular'),
+       url('../fonts/Montserrat-Regular.woff2') format('woff2'),
        url('../fonts/Montserrat-Regular.woff') format('woff');
   font-display: swap;
 }
@@ -47,7 +52,8 @@
   font-family: 'Montserrat-Italic';
   font-weight: 400;
   font-style: italic;
-  src: url('../fonts/Montserrat-Italic.woff2') format('woff2'),
+  src: local('Montserrat-Italic'),
+       url('../fonts/Montserrat-Italic.woff2') format('woff2'),
        url('../fonts/Montserrat-Italic.woff') format('woff');
   font-display: swap;
 }
@@ -56,7 +62,8 @@
   font-family: 'Montserrat-Medium';
   font-weight: 500;
   font-style: normal;
-  src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+  src: local('Montserrat-Medium'),
+       url('../fonts/Montserrat-Medium.woff2') format('woff2'),
        url('../fonts/Montserrat-Medium.woff') format('woff');
   font-display: swap;
 }
@@ -65,7 +72,8 @@
   font-family: 'Montserrat-SemiBold';
   font-weight: 600;
   font-style: normal;
-  src: url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+  src: local('Montserrat-SemiBold'),
+       url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
        url('../fonts/Montserrat-SemiBold.woff') format('woff');
   font-display: swap;
 }
