--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -151,6 +151,51 @@
     margin-right: 0;
   }
   .btn-burger{
+    position: relative;
+    display: block;
+    width: 35px;
+    height: 25px;
+    display: none;
+    transition: .3s;
+    &::before,
+    &::after{
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      top: 0;
+      left: 0;
+      border-radius: 2px;
+    }
+    &::after{
+      top: unset;
+      bottom: 0;
+    }
+    span{
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      top: 12px;
+      left: 0;
+      border-radius: 2px;    
+    }
+    &--active{
+      &::before{
+        transform: rotate(135deg);
+        top: 11px;
+      }
+      &::after{
+        transform: rotate(-135deg);      
+        bottom: 11px;
+      }
+      span{
+        transform: scale(0)
+      }
+    }
+  }
+  .btn-burger{
     display: block;
     z-index: 10;
     &::before,
