--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   font-size: 16px;
   color: $default;
-  background-color: #11161d;
+  background-color: #131921;
 }
 
 main {
