--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -56,6 +56,13 @@
     margin-bottom: 16px;
   }
 }
+
+@media (max-width: 1150px){
+  .developers__statistic{
+    margin-top: 0;
+  }
+}
+
 @media (max-width: 1024px){
   .header-top{
     padding: 25px 0;
@@ -67,6 +74,15 @@
     background-image: none;
     &__image{
       max-width: 540px;
+    }
+  }
+  .developers{
+    &__img{
+      min-width: 340px;
+    }
+    &__statistic{
+      flex-wrap: wrap;
+      justify-content: space-around;
     }
   }
   .developers__statistic-item{
@@ -110,25 +126,18 @@
       display: none;
     }
   }
-  .developers{
-    &__img{
-      max-width: 400px;
-    }
-    &__statistic{
-      margin-top: 0;
-      flex-wrap: wrap;
-      justify-content: space-around;
-    }
-    &__statistic-item{
-      margin-bottom: 15px;
-      width: 350px;
-    }
+  .developers__statistic-item{
+    margin-bottom: 15px;
+    width: 350px;
   }
   .faq__item-trigger {
     padding: 23px 65px 23px 100px;
   }
 }
 @media (max-width: 768px){
+  .container{
+    padding: 0 17px;
+  }
   .header__wrapper{
     position: relative;
     display: flex;
@@ -267,14 +276,19 @@
     width: 100%;
   }
   .card-item{
-    display: flex;
     padding: 20px 15px 20px 20px;
   }
   .card-item__content-wrapper{
-    margin-left: 25px;
+    display: flex;
+    margin-bottom: 15px;
   }
   .card-item__box-img{
     margin-bottom: 0;
+  }
+  .card-item__title{
+    margin-bottom: 0;
+    line-height: 30px;
+    margin-left: 15px;
   }
   .card-item__text{
     width: 100%;
@@ -282,6 +296,7 @@
   .result{
     &__list-item{
       padding: 20px 15px 20px 20px;
+      display: flex;
       &::before{
         display: none;
       }
@@ -406,6 +421,9 @@
     }
   }
   .developers{
+    &__img{
+      min-width: unset;
+    }
     &__inner{
       flex-direction: column-reverse;
     }
@@ -415,6 +433,9 @@
     &__title{
       text-align: center;
       max-width: 500px;
+    }
+    &__inner-text{
+      line-height: 30px;
     }
     &__statistic{
       margin-top: -30px;
@@ -444,6 +465,7 @@
     font-size: 14px;
     line-height: 30px;
     margin-bottom: 25px;
+    text-transform: unset;
   }
   .footer__list-item{
     max-width: 100%;
@@ -479,6 +501,11 @@
       margin-bottom: 45px;
     }
   }
+  .card-item__text,
+  .list__item-text {
+    font-size: 14px;
+    line-height: 27px;
+  }
   .list{
     grid-gap: 20px 0;
     &__item{
@@ -500,8 +527,9 @@
     }
     &__subtitle{
       margin-bottom: 10px;
-      font-size: 15px;
-      line-height: 35px;
+      font-size: 16px;
+      line-height: 30px;
+      text-transform: unset;
     }
     &__text{
       margin: 15px 0 30px;
@@ -566,9 +594,6 @@
     &__subtitle-description{
       font-size: 14px;
     }
-    &__box-list{
-      justify-content: space-between;
-    }
   }
   .function{
     margin-bottom: 150px;
@@ -603,10 +628,13 @@
     }
   }
   .list{
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   }
 }
 @media (max-width: 320px){
+  .container{
+    padding: 0 10px;
+  }
   .function{
     margin-bottom: 130px;
   }
